[project]
name = "admin-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask-admin",
    "flask-sqlalchemy-lite>=0.1.0",
    "psycopg>=3.2.3",
]

[tool.uv.sources]
flask-admin = { git = "https://github.com/pallets-eco/flask-admin" }
